--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     lat: 37.1503, 
                     lng: -113.3893, 
                     title: "BASH Mancaves", 
-                    info: "This is Project 5 details.", 
+                    info: "<p>The BASH Mancaves take the traditional concept of a mancave to a whole new level, combining expansive living spaces with top-tier entertainment and luxury amenities. While each unit features the classic two-story garage with a mezzanine overlooking the garage—ideal for showcasing vehicles and toys—these mancaves offer far more than just storage. Each unit can be fully stocked with any combination of power toys imaginable, from ATVs and jet skis to high-end performance vehicles, ensuring adventure is always within reach.</p> <p>Rising three stories above the garage, the living spaces are designed for both relaxation and entertainment. Each spacious bedroom includes an ensuite bathroom and private balcony, even the dedicated bunkroom, ensuring privacy and comfort for every guest. Expansive windows throughout flood the space with natural light and highlight the breathtaking views.</p> <p>For the ultimate in-home experience, some units include an additional two-story basement, featuring incredible amenities such as a half-court basketball court, pickleball court, and a private in-home theater with stadium seating, golf simulator, or bowling alley—or even a combination of these features.</p> <p>At the heart of each mancave’s design is the third-floor deck, which features a stunning infinity-edge pool, seamlessly blending indoor and outdoor living. To take the luxury experience even further, private service staff can be arranged, including personal chefs, DJs, or even live pianists, creating an atmosphere tailored to any occasion.</p> <p>With high-end finishes, thoughtfully designed spaces, and entertainment at every turn, the BASH Mancaves set a new standard for luxury, creating the ultimate retreat for those who demand more than just a garage.</p>", 
                     img: "https://i.imgur.com/zAEnsGh.jpg",
                     link: "" 
                 },
@@ -146,9 +146,9 @@
                     lat: 37.1512, 
                     lng: -113.3842, 
                     title: "Obsidian Resort", 
-                    info: "This is Project 12 details.", 
-                    img: "",
-                    link: "" 
+                    info: "<p>Powered by premier hospitality, the residential experience at Obsidian Resort & Residences encompasses seven courtyard garden buildings with expansive, design-centric homes with outdoor spaces—set against the cinematic backdrop of a pristine landscape. The residences offer a thoughtful counterpoint to a traditional hotel stay, anchored by all the conveniences, amenities, and hospitality services of a quintessential destination resort. The unique ownership structure offers buyers the opportunity to take advantage of the effortless in-house rental program to support their investment.</p>", 
+                    img: "https://i.imgur.com/xu63NLX.jpg",
+                    link: "https://www.obsidianresortandresidences.com/obsidian-residences" 
                 },
             ];
 
