--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Interactive Sand Hollow Plat Map</title>
+  <title>Interactive Plat Map</title>
   <style>
     body {
       margin: 0;
@@ -44,12 +44,21 @@
       text-align: center;
     }
     .popup img {
-      width: 100px;
+      width: 600px;
+      max-width: 100%;
       display: block;
-      margin: 0 auto 5px auto;
+      margin: 0 auto 10px auto;
     }
     .popup h3 {
+      margin: 10px 0 5px 0;
+      font-size: 24px;
+    }
+    .popup p {
+      font-size: 12px;
       margin: 5px 0;
+    }
+    .popup a {
+      display: inline-block; 
     }
   </style>
 </head>
