--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Interactive Plat Map</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       font-family: sans-serif;
+      height: 100%;
     }
     .map-container {
       position: relative;
       width: 100%;
       max-width: 1125px;
       margin: 0 auto;
+      height: auto;
     }
     .map-image {
       width: 100%;
       height: auto;
       display: block;
+      object-fit: contain;
     }
     .marker {
       position: absolute;
@@ -55,10 +58,10 @@
     }
     .popup h3 {
       margin: 8px 0;
-      font-size: 1.75rem; /* Increased heading size */
+      font-size: 1.75rem; 
     }
     .popup p {
-      font-size: 0.75rem; /* Reduced info text size */
+      font-size: 0.75rem; 
     }
     .popup a {
       display: inline-block;
