--- a/index.html
+++ b/index.html
@@ -14,18 +14,14 @@
     .map-container {
       position: relative;
       width: 100vw;
-      height: 100vh;
+      max-width: 100%;
+      aspect-ratio: 3 / 2; 
+      margin: 0 auto;
       overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
     .map-image {
-      max-width: 100%;
-      max-height: 100%;
-      width: auto;
-      height: auto;
-      object-fit: contain;
+      width: 100%;
+      height: 100%;
       display: block;
     }
     .marker {
