--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     }
     .marker {
       position: absolute;
-      width: 10px;
-      height: 10px;
+      width: .75vw;
+      height: .75vw;
+      min-width: 8px;
+      min-height: 8px;
+      max-width: 25px;
+      max-height: 25px;
       background-color: red;
       border-radius: 50%;
       cursor: pointer;
