--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
       <li><span class="key-dot" style="background-color: #9A7B4F;"></span> Richmond American Homes</li>
       <li><span class="key-dot" style="background-color: #555555;"></span> Dennis Miller Homes</li>
       <li><span class="key-dot" style="background-color: #008080;"></span> Obsidian</li>
+      <li><span class="key-dot" style="background-color: #360063;"></span> Regional Medical Center</li>
       <li><span class="key-dot" style="background-color: #006200;"></span> Parks</li>
       <li><span class="key-dot" style="background-color: #000000;"></span> Unassigned</li>
     </ul>
